--- a/res/layout/about_layout.xml
+++ b/res/layout/about_layout.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <ScrollView android:layout_height="fill_parent" 
-android:layout_width="fill_parent" 
-android:paddingBottom="11sp"
+ android:layout_width="fill_parent" 
+ android:paddingBottom="11sp"
  android:paddingRight="11sp" 
  android:paddingLeft="11sp" 
  xmlns:android="http://schemas.android.com/apk/res/android">
-
 
 <LinearLayout android:layout_height="wrap_content"
      android:layout_width="match_parent" 
@@ -17,19 +16,15 @@ android:paddingBottom="11sp"
     android:text="About DateSpot\n" android:textSize="30sp" 
     android:textStyle="bold"/>
 
-<TextView android:layout_height="wrap_content" 
-    android:layout_width="fill_parent" 
-    android:text="\nHow To Use:" 
-    android:textSize="22sp"/>
 
 <TextView android:layout_height="wrap_content" 
     android:layout_width="fill_parent" 
-    android:text="\n+ SPOTS TAB\n\n  Map marker colors indicate status:\n     • Green = Currently open\n     • Yellow = Closing in less than 30 mins\n     • Red = Currently closed\n" 
+    android:text="\n1. SPOTS TAB \n\n  Find Date Spots by Map Marker. \n\n   Map Marker Status:\n     • Pink is Currently open\n     • Orange is Closing within 30 minutes\n     • Blue is Currently closed\n" 
      android:textSize="16sp"/>
 
 <TextView android:layout_height="wrap_content" 
     android:layout_width="fill_parent" 
-    android:text="\n+ LIST TAB\n\n  Displays contact info for all DateSpots.\n\n     *More Features Coming Soon*\n       • List Sorting\n       • Reservations\n       • Ratings and Feedback\n       • Hot DateSpots" 
+    android:text="\n2. CATEGORIES INCLUDE: \n\n*FUN*\n      • Recreation\n      • Entertainment\n      • Shopping\n\n*FOOD*\n      • Restaurants\n      • Cafes\n      • Desserts\n\n*DRINK*\n      • Bars\n      • Pubs\n      • Clubs\n\n\n" 
      android:textSize="16sp"/>
 
 <TextView android:layout_height="wrap_content" 
@@ -40,12 +35,11 @@ android:paddingBottom="11sp"
     android:textSize="16sp"/>
 
 <TextView android:layout_height="wrap_content" 
-    android:layout_width="fill_parent" android:text="\n\nDisclaimer:" android:textSize="22sp"/>
+    android:layout_width="fill_parent" android:text="\nDisclaimer:" android:textSize="22sp"/>
 
 <TextView android:layout_height="wrap_content" 
-    android:layout_width="fill_parent" android:text="\nThis application is to be used at the user's own risk. The Date Spot Boston team does not guarantee the accuracy of information contained in this app. Including, but not limited to DateSpot locations, opening times, closing times, and establishment names. Some of the images used are taken from Instagramers Boston. All rights to the respective images are held by Instagramers Boston. The developers of this software are not responsible for problems that may result from use of the Date Spot Boston app such as damage to the mobile device or humiliation of being denied by their respective date." 
+    android:layout_width="fill_parent" android:text="\nThis application is to be used at the user's own risk. The Date Spot Boston team does not guarantee the accuracy of information contained in this app. Including, but not limited to DateSpot locations, opening times, closing times, and establishment names. Some of the images used are taken from Instagramers Boston. All rights to the respective images are held by Instagramers Boston. The developers of this software are not responsible for problems that may result from use of the Date Spot Boston app such as damage to the mobile device or being denied by their respective date." 
       android:textSize="16sp"/>
-
 
 <TextView android:layout_height="wrap_content" 
     android:layout_width="fill_parent" 
@@ -67,7 +61,6 @@ android:paddingBottom="11sp"
     android:text="Legal" 
     android:id="@+id/legal_button" 
     android:onClick="legalClick"/>
-
 
 </LinearLayout>
 
